<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.jhaucke</groupId>
	<artifactId>CarRemoteFX</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>CarRemoteFX</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<pi.host>169.254.0.xx</pi.host>
		<pi.deployPath>/home/pi/java/jar</pi.deployPath>
		<pi.user>pi</pi.user>
		<pi.password>raspberry</pi.password>
	</properties>

	<build>
		<plugins>
			<!-- Build jar -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.github.jhaucke.carremotefx.CarRemoteFX</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>install</phase>
						<configuration>
							<target>
								run a command on the remote server (here mkdir)
								<sshexec command="mkdir -p ${pi.deployPath}" host="${pi.host}"
									password="${pi.password}" port="22" trust="true" username="${pi.user}"></sshexec>
								copy the shaded jar to the raspberry pi on install
								<scp failonerror="true"
									todir="${pi.user}:${pi.password}@${pi.host}:${pi.deployPath}"
									trust="true">
									<fileset
										file="${project.basedir}/target/${project.artifactId}-${project.version}-jar-with-dependencies.jar">
									</fileset>
								</scp>
								run a command on the remote server (run jar file)
								<sshexec
									command="sudo java -Djava.ext.dirs=/home/pi/java/armv6hf-sdk/rt/lib/ext -jar ${pi.deployPath}/${project.artifactId}-${project.version}-jar-with-dependencies.jar"
									host="${pi.host}" password="${pi.password}" port="22" trust="true"
									username="${pi.user}"></sshexec>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.apache.ant</groupId>
						<artifactId>ant-jsch</artifactId>
						<version>1.9.4</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.12</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.3</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
